force-app/main/default/objects/Port__c/Port__c.object-meta.xml
<CustomObject>
    <customHelpPage>OnlineHelpPorts</customHelpPage>
    <description>Port</description>
    <label>ポートコード</label>
    <nameField>
        <label>Port name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>