force-app/main/default/objects/Port__c/fields/CodeOfPort__c.field-meta.xml
<CustomField>
    <fullName>CodeOfPort__c</fullName>
    <description>This field will replace PortCode__c. This field and Port Type will be a unique pair</description>
    <inlineHelpText>Combine Port Code Only+Country Code. To edit, directly edit or edit Port Code Only and Country Code.</inlineHelpText>
    <label>Port Code</label>
    <length>55</length>
    <type>Text</type>
</CustomField>