force-app/main/default/objects/Port__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <label>Country Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFGHANISTAN</fullName>
            </value>
            <value>
                <fullName>ALBANIA</fullName>
            </value>
            <value>
                <fullName>ALGERIA</fullName>
            </value>
            <value>
                <fullName>AMERICA</fullName>
            </value>
            <value>
                <fullName>AMERICAN SAMOA</fullName>
            </value>
            <value>
                <fullName>ANGOLA</fullName>
            </value>
            <value>
                <fullName>ANGUILLA</fullName>
            </value>
            <value>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>ARMENIA</fullName>
            </value>
            <value>
                <fullName>ARUBA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>AZERBAIJAN</fullName>
            </value>
            <value>
                <fullName>BAHAMAS</fullName>
            </value>
            <value>
                <fullName>BAHRAIN</fullName>
            </value>
            <value>
                <fullName>BANGLADESH</fullName>
            </value>
            <value>
                <fullName>BARBADOS</fullName>
            </value>
            <value>
                <fullName>BELARUS</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BELIZE</fullName>
            </value>
            <value>
                <fullName>BENIN</fullName>
            </value>
            <value>
                <fullName>BERMUDA</fullName>
            </value>
            <value>
                <fullName>BHUTAN</fullName>
            </value>
            <value>
                <fullName>BOLIVIA</fullName>
            </value>
            <value>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </value>
            <value>
                <fullName>BOTSWANA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>BRUNEI DARUSSALAM</fullName>
            </value>
            <value>
                <fullName>BULGARIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>