force-app/main/default/objects/Port__c/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>Name  + &apos; - &apos; +  PortCodeOnly__c + &apos; - &apos; + TEXT( Country_Name__c ) + &apos; - &apos; +  TEXT(Port_Type__c)</formula>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>