force-app/main/default/objects/Port__c/fields/Port_Type__c.field-meta.xml
<CustomField>
    <fullName>Port_Type__c</fullName>
    <label>Port Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>