force-app/main/default/objects/Port__c/fields/PortCodeForCustomsSystem__c.field-meta.xml
<CustomField>
    <fullName>PortCodeForCustomsSystem__c</fullName>
    <label>PORT CODE FOR CUSTOMS SYSTEM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>