force-app/main/default/objects/Port__c/listViews/AIR_PORT.listView-meta.xml
<ListView>
    <fullName>AIR_PORT</fullName>
    <columns>NAME</columns>
    <columns>CodeOfPort__c</columns>
    <columns>City_Name__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Fullname__c</columns>
    <columns>Port_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Port_Type__c</field>
        <operation>equals</operation>
        <value>AIR</value>
    </filters>
    <label>AIR PORT</label>
    <language>en_US</language>
</ListView>