force-app/main/default/objects/Port__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PortCodeOnly__c</columns>
    <columns>CodeOfPort__c</columns>
    <columns>Unique_Key__c</columns>
    <columns>Fullname__c</columns>
    <columns>Port_Type__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Country_Name__c</columns>
    <columns>City_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>