force-app/main/default/objects/Port__c/listViews/VIETNAM_POR.listView-meta.xml
<ListView>
    <fullName>VIETNAM_POR</fullName>
    <columns>NAME</columns>
    <columns>Country_Name__c</columns>
    <columns>Country_Code__c</columns>
    <columns>City_Name__c</columns>
    <columns>CodeOfPort__c</columns>
    <columns>Port_Type__c</columns>
    <columns>Fullname__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Name__c</field>
        <operation>equals</operation>
        <value>VIETNAM</value>
    </filters>
    <label>VIETNAM POR</label>
    <language>en_US</language>
</ListView>